// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getFormValuesByKoulutus returns correct form values for ammatillinen koulutus 1`] = `
Object {
  "description": Object {
    "kuvaus": Object {
      "fi": "<p>Fi kuvaus</p>",
      "sv": "<p>Sv kuvaus</p>",
    },
    "linkkiEPerusteisiin": Object {},
  },
  "esikatselu": false,
  "externalId": undefined,
  "information": Object {
    "eperuste": Object {
      "value": undefined,
    },
    "korkeakoulutukset": Array [],
    "koulutus": Object {
      "value": "koulutus_371101#1",
    },
    "koulutusalat": Array [
      Object {
        "value": "koulutusala_1#1",
      },
      Object {
        "value": "koulutusala_2#1",
      },
    ],
    "nimi": Object {
      "fi": "Fi nimi",
      "sv": "Sv nimi",
    },
    "opintojenLaajuus": Object {
      "value": "laajuus_1#1",
    },
    "opintojenLaajuusRange": "",
    "opintojenLaajuusnumero": "",
    "opintojenLaajuusyksikko": Object {
      "value": "",
    },
    "tutkintonimike": Array [
      Object {
        "value": "nimike_1#1",
      },
      Object {
        "value": "nimike_2#1",
      },
    ],
  },
  "julkinen": true,
  "kieliversiot": Array [
    "fi",
    "sv",
  ],
  "koulutustyyppi": "amm",
  "lisatiedot": Object {
    "osioKuvaukset": Object {
      "osio_1#1": Object {},
      "osio_2#1": Object {
        "fi": "<p>Fi kuvaus</p>",
        "sv": "<p>Sv kuvaus</p>",
      },
    },
    "osiot": Array [
      Object {
        "value": "osio_1#1",
      },
      Object {
        "value": "osio_2#1",
      },
    ],
  },
  "organisaatioOid": undefined,
  "osaamisala": null,
  "soraKuvaus": null,
  "tarjoajat": Object {
    "tarjoajat": Array [
      "123.456.789",
    ],
  },
  "teemakuva": undefined,
  "tila": "tallennettu",
  "tutkinnonosat": Object {
    "nimi": Object {
      "fi": "Fi nimi",
      "sv": "Sv nimi",
    },
    "osat": Array [],
  },
}
`;

exports[`getFormValuesByKoulutus returns correct form values given koulutus 1`] = `
Object {
  "description": Object {
    "kuvaus": Object {
      "fi": "<p>Fi kuvaus</p>",
      "sv": "<p>Sv kuvaus</p>",
    },
    "linkkiEPerusteisiin": Object {},
  },
  "esikatselu": false,
  "externalId": "ext1",
  "information": Object {
    "eperuste": Object {
      "value": undefined,
    },
    "korkeakoulutukset": Array [
      Object {
        "value": "koulutus_371101#1",
      },
      Object {
        "value": "koulutus_201000#1",
      },
    ],
    "koulutus": Object {
      "value": undefined,
    },
    "koulutusalat": Array [
      Object {
        "value": "koulutusala_1#1",
      },
      Object {
        "value": "koulutusala_2#1",
      },
    ],
    "nimi": Object {
      "fi": "Fi nimi",
      "sv": "Sv nimi",
    },
    "opintojenLaajuus": Object {
      "value": "laajuus_1#1",
    },
    "opintojenLaajuusRange": "",
    "opintojenLaajuusnumero": "",
    "opintojenLaajuusyksikko": Object {
      "value": "",
    },
    "tutkintonimike": Array [
      Object {
        "value": "nimike_1#1",
      },
      Object {
        "value": "nimike_2#1",
      },
    ],
  },
  "julkinen": true,
  "kieliversiot": Array [
    "fi",
    "sv",
  ],
  "koulutustyyppi": "yo",
  "lisatiedot": Object {
    "osioKuvaukset": Object {
      "osio_1#1": Object {},
      "osio_2#1": Object {
        "fi": "<p>Fi kuvaus</p>",
        "sv": "<p>Sv kuvaus</p>",
      },
    },
    "osiot": Array [
      Object {
        "value": "osio_1#1",
      },
      Object {
        "value": "osio_2#1",
      },
    ],
  },
  "organisaatioOid": undefined,
  "osaamisala": null,
  "soraKuvaus": Object {
    "value": "1234",
  },
  "tarjoajat": Object {
    "tarjoajat": Array [
      "123.456.789",
    ],
  },
  "teemakuva": undefined,
  "tila": "tallennettu",
  "tutkinnonosat": Object {
    "nimi": Object {
      "fi": "Fi nimi",
      "sv": "Sv nimi",
    },
    "osat": Array [],
  },
}
`;
